--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
         <head>
-
+            <script src="index.js"></script>
         </head>
         <body>
             <p>my work</p>
